# mdja

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  pyproject.toml  release-plz.toml
.github/workflows/: ci.yml  release.yml
examples/: basic.rs
js/: example.js  example.ts  package.json
python/: example.py
src/: lib.rs  python.rs  wasm.rs
