[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mdja"
version = "0.1.2"
description = "日本語に最適化されたMarkdownパーサー - CommonMark + GFM対応"
authors = [{name = "0809android"}]
license = {text = "MIT OR Apache-2.0"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Markup",
]
keywords = ["markdown", "japanese", "parser", "commonmark", "gfm"]

[project.urls]
Homepage = "https://github.com/0809android/mdja"
Repository = "https://github.com/0809android/mdja"
Documentation = "https://docs.rs/mdja"

[tool.maturin]
features = ["python"]
module-name = "mdja"
